# MultiThreadedDownloadManager

./: .gitignore  CMakeLists.txt
include/: Downloader.hpp  ThreadPool.hpp
src/: Downloader.cpp  main.cpp
